pods/apple-banana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-banana-ingress
spec:
  rules:
  - http:
      paths:
        - path: /apple
          pathType: Prefix
          backend:
            service:
              name: apple-service
              port:
                number: 5678
        - path: /banana
          pathType: Prefix
          backend:
            service: 
              name: banana-service
              port:
                number: 5678
        - path: /snake
          pathType: Prefix
          backend:
            service:
              name: hello-world 
              port:
                number: 80
